fix: 修复媒体文件端点路径解析错误 + 多项优化
- 修复 MediaController.getDocFile 和 getPdfCover 端点的路径解析 bug
  - 原代码错误假设 filePath 为相对路径 '../uploads/...'
  - 实际存储的是绝对路径，改为直接使用 Paths.get(doc.getFilePath())
- 新增 doc-file 端点测试脚本 (test_docfile_fix.sh)
- 同步更新前后端多项配置和优化